samples/_failures_safe/1761209702_7e72e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17fc7ec2.c: In function ‘main’:
./samples/SAFE/__tmp_17fc7ec2.c:184:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  184 |         Event event
      |         ^~~~~
./samples/SAFE/__tmp_17fc7ec2.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_17fc7ec2.c:184:9: error: expected declaration or statement at end of input
